time 4 commitment
