# api/controllers/userController.js
@@ -6,14 +6,66 @@
 
 var mongoose = require('mongoose');
 var User = mongoose.model('User');
+var Service = mongoose.model('Service');
 var handleError = require('../helpers/errorhandler')
+var moment = require('moment-timezone');
 
 module.exports = {
 	postUser: addUser,
   	getUsers: getUserList,
 	getUser: getUserById,
+	getUserMatch: matchUser,
 	putUser: updateUserById,
 };
+
+function matchUser(req, res){
+	// Get service currently running
+    var thisMoment = moment();
+    var previousMoment = moment().subtract(1, 'days');
+
+	var query = {
+        "$and" : [
+            {
+                startDateTime : {
+                    $lt: thisMoment, 
+                    $gt: previousMoment, 
+                },
+            },
+    ]};
+
+    Service.findOne(query, function (err, service) {
+        if(err) {return handleError(req, res, 500, err);}
+        
+        // With only 1 user at the service it's hard to find a match. =)
+        if(service.usersVisited == undefined || service.usersVisited.length <= 1){
+        	console.log("No content. Usersvisited: ");
+        	console.log(service.usersVisited);
+        	res.status(204);
+        	return res.json("No content");
+        }
+
+        // Select a random user that is not you!
+        var rand = Math.floor((Math.random() * service.usersVisited.length) + 0);
+        var selectedMatch = service.usersVisited[rand]
+        while(selectedMatch != req.swagger.params.userId.value){
+        	selectedMatch = service.usersVisited[Math.floor((Math.random() * service.usersVisited.length) + 0)]
+        }
+        
+        var secondQuery = {};
+        secondQuery._id = selectedMatch
+    	
+        console.log(selectedMatch);
+        console.log(selectedMatch);
+
+    	var userResult = User.findById(secondQuery).then(data => {
+    		if(data == null){return handleError(req, res, 500, "This user must exist");}
+    		console.log("Json return: ");
+    		console.log(data);
+    		return res.json(data);
+    	})
+    	.fail(err => handleError(req, res, 500, err));
+    });
+}
 
 function addUser(req, res) {
 	var user = new User(req.body);
@@ -41,7 +93,8 @@ function getUserById(req, res) {
 
 	var userResult = User.findById(query).then(data => {
 		if(data == null){
-			return handleError(req, res, 404, "Not found");
+			res.status(404)
+			return res.json("Not found");
 		}
 		return res.json(data);
 	})
